# resample

./: CMakeLists.txt  grid.h  resample.cpp
src/: cmdline.cpp  cmdline.h  grid.h  main.cpp
